# LAA-maps-viewer

./: .gitignore  .travis.yml  AboutDialog.qml  AltChart.qml  CMakeLists.txt  CalendarWindow.qml  CirclingResultsTableItemDelegate.qml  ConfigFile.qml  ContestantsDelegate.qml  CreateContestantTab.qml  Header.qml  IGCChooseDialog.qml  MyEditableTextField.qml  MyReadOnlyTextField.qml  MyTranslator.qml  PathConfiguration.qml  PinchMap.qml  PolyResultsTableItemDelegate.qml  PrintMap.qml  README.md  RefreshContestantsDialog.qml  ResultsDetailComponent.qml  ResultsUploader.qml  Ruler.qml  ScoreListTableDelegate.qml  SelectCompetitionDialog.qml  TableHeaderVerticalSplitter.qml  UploaderDialog.qml  customnetworkaccessmanager.cpp  filereader.cpp  filereader.h  functions.js  igc.cpp  igcfiltered.cpp  igcfiltered.h  main.cpp  main.qml  md5.js  pdfwriter.cpp  pdfwriter.h  (+12 more)
.github/workflows/: lint.yml  main.yml
editor/: LICENCE  editor.pro  editor.qrc  editor_defaults.json  filereader.cpp  filereader.h  gpxjsonconvertor.cpp  gpxjsonconvertor.h  igc.cpp  igc.h  imagesaver.h  kmljsonconvertor.cpp  kmljsonconvertor.h  main.cpp
editor/i18n/: editor_cs_CZ.ts  editor_en_US.ts
i18n/: viewer_cs_CZ.ts  viewer_en_US.ts
qml/viewer/: AboutDialog.qml  AltChart.qml  CalendarWindow.qml  CompetitionConfiguration.qml  ConfigFile.qml  ContestantsDelegate.qml  ContinuousResultsView.qml  ContinuousResultsViewTable.qml  ContinuousResultsViewTableRow.qml  Coordinate.qml  CreateContestantDialog.qml  CreateContestantTab.qml  Header.qml  HorizontalDelimeter.qml  IGCChooseDialog.qml  IgcFilesDelegate.qml  ImportDialog.qml  MPieSlice.qml  ModifiedContestantsDelegate.qml  MyEditableTextField.qml  MyImage.qml  MyReadOnlyTextField.qml  MySpinBox.qml  MyTranslator.qml  NativeText.qml  NativeTextInput.qml  PathConfiguration.qml  PinchMap.qml  PrintMap.qml  ProgressBarDialog.qml  RefreshContestantsDialog.qml  RefreshDialogListViewWithCheckBox.qml  ResultsDetailComponent.qml  ResultsUploader.qml  ResultsWindow.qml  Ruler.qml  ScoreListTableDelegate.qml  SelectCompetitionDialog.qml  SimpleMapObject.qml  Spacer.qml  (+9 more)
src/: customnetworkaccessmanager.cpp  customnetworkaccessmanager.h  filereader.cpp  filereader.h  igc.cpp  igc.h  igcfiltered.cpp  igcfiltered.h  imagesaver.cpp  imagesaver.h  main.cpp  pdfwriter.cpp  pdfwriter.h  resultscreater.cpp  resultscreater.h  sortfilterproxymodel.cpp  sortfilterproxymodel.h  uploader.cpp  uploader.h  worker.cpp  worker.h
src/qml/: AboutDialog.qml  CirclingResultsTableItemDelegate.qml  ConfigFile.qml  ContestantsDelegate.qml  CreateContestantTab.qml  ModifiedContestantsDelegate.qml  PathConfiguration.qml  PinchMap.qml  PolyResultsTableItemDelegate.qml  PrintMap.qml  RefreshContestantsDialog.qml  RefreshDialogListViewWithCheckBox.qml  ResultsDetailComponent.qml  ResultsUploader.qml  Ruler.qml  ScoreListTableDelegate.qml  SelectCompetitionDialog.qml  UploaderDialog.qml  Waypoint.qml  geom.js  main.qml
viewer/: igc.cpp  viewer.pro
viewer/i18n/: viewer_cs_CZ.ts  viewer_en_US.ts
web-viewer/: admin-files-ajax.php  admin-files.php  admin-init.php  admin.php  config.php  csv.php  geo.php  igc.php  index.php  posadka.php  set.sh  soutez.php  style.css  template-empty.php  template.php  tune.php
web-viewer/files/: index.json
(+49 files in other folders)
